--- a/src/app.css
+++ b/src/app.css
@@ -34,6 +34,12 @@ body {
 h1 {
   font-size: 3.2em;
   line-height: 1.1;
+  font-family:'PT Serif', Times, serif;
+}
+
+p {
+  font-family:'PT Serif', Times, serif;
+
 }
 
 #app {
@@ -76,4 +82,23 @@ button:focus-visible {
   button {
     background-color: #f9f9f9;
   }
+}
+
+
+body:before {
+  content: '📊';
+  display: block;
+  position: absolute;
+  top: 20px;
+  left: 20px;
+  font-size: 18px;
+}
+
+body:after {
+  content: 'MVTEC Final Project';
+  display: block;
+  position: absolute;
+  top: 20px;
+  left: 45px;
+  font-size: 15px;
 }
