--- a/src/app.css
+++ b/src/app.css
@@ -39,6 +39,7 @@ h1 {
   font-size: 3.2em;
   line-height: 1.1;
   font-family:'Open Sans', Times, serif;
+  font-weight: 400;
 }
 
 p, h2, h3, h4, button {
