--- a/src/app.css
+++ b/src/app.css
@@ -31,7 +31,7 @@ body {
   display: flex;
   /* background-color: #7FB1CB; */
   background: rgb(127,177,203);
-  background: linear-gradient(0deg, rgba(127,177,203,1) 85%, rgba(67,92,117,1) 100%);
+  background: linear-gradient(0deg, #658DA7 85%, rgb(33,52,70) 100%);
 
 }
 
@@ -40,11 +40,11 @@ h1 {
   line-height: 1.1;
   font-family:'Open Sans', Times, serif;
   font-weight: 400;
+  color: white;
 }
 
 p, h2, h3, h4, button {
   font-family:'Open Sans', Times, serif;
-
 }
 
 #app {
